Gb_direct_implement_2.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,6 +193,8 @@
     <string name="re_fax">Re-fax</string>
     <string name="re_email">Re-Email</string>
     <string name="print">PRINT</string>
+    <string name="rewards">Rewards</string>
+    <string name="applied">Applied</string>
     <!--Confirm time activity-->
     <string name="des">Click on Button To Confirm Time When it\n will be Ready</string>
     <string name="min_20">READY IN 20 MIN</string>
